--- a/pages/about.hbs
+++ b/pages/about.hbs
@@ -22,7 +22,7 @@
 </head>
 
     <body>
-        
+
     {{>navbar}}
 
     <section class="bg-white py-8">
@@ -30,6 +30,7 @@
             <a class="uppercase tracking-wide no-underline hover:no-underline font-bold text-gray-800 text-xl mb-8" href="#">About</a>
             <p class="mt-8 mb-8 text-xl">{{global.name}} was founded in 2021 by 8 revered technology leaders.</p>
             <p class="mt-8 mb-8 text-xl">Meet the team below!</p>
+            <p class="test">Test commit!</p>
         </div>
     </section>
 
@@ -41,6 +42,6 @@
             </div>
         </div>
 
-    </body> 
+    </body>
 
 </html>
